--- a/templates/index.html
+++ b/templates/index.html
@@ -7,10 +7,12 @@
         
         
         
-        <link rel="stylesheet" type="text/css" href="css/normalize.css">
-        <link rel="stylesheet" type="text/css" href="css/grid.css">
-        <link rel="stylesheet" type="text/css" href="css/style.css">
-        <link rel="stylesheet" type="text/css" href="css/queries.css">
+        <link rel="stylesheet" type="text/css" href="./static/styles/normalize.css">
+        <link rel="stylesheet" type="text/css" href="./static/styles/grid.css">
+        <link rel="stylesheet" type="text/css" href="./static/styles/style.css">
+        <link rel="stylesheet" type="text/css" href="./static/styles/queries.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js">
+        </script>
         
     
         
@@ -93,5 +95,5 @@
         
         
     </body>
-    <script type="text/javascript" src="js/script.js"></script>
+    <script type="text/javascript" src="../static/js/script.js"></script>
 </html>
