post-hackathon cleanup

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,96 +4,58 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Eye Hear</title>
-        
-        
-        
         <link rel="stylesheet" type="text/css" href="./static/styles/normalize.css">
         <link rel="stylesheet" type="text/css" href="./static/styles/grid.css">
         <link rel="stylesheet" type="text/css" href="./static/styles/style.css">
         <link rel="stylesheet" type="text/css" href="./static/styles/queries.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js">
-        </script>
-        
-    
-        
+        </script>    
     </head>
     <body>
         <header class="header">
-        <div class=" row">
-            <div class="col span-2-of-2 headline">
-        <h1>EyeHear</h1>
-            <h2></h2>
+            <div class=" row">
+                <div class="col span-2-of-2 headline">
+                    <h1>EyeHear</h1>
+                </div>
             </div>
-            </div>
-          
-      <div class="row">
+              
+            <div class="row">
                 <form method="post" action="#" class="contact-form">
                     <div class="row">
                         <div class="col span-3-of-3">
-                           <p class="center-text">-uOttaHack Hackathon project: </p>
-                           
+                            <p class="center-text">-uOttaHack Hackathon project: </p>   
                         </div>
                         <div class="col span-3-of-3">
-                        <br>
-                        <p class="center-text">Creating described video for real life using Google Vision API and Raspberry Pi.</p>
+                            <br>
+                            <p class="center-text">Creating described video for real life using Google Vision API and Raspberry Pi.</p>
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="col span-1-of-3">
-                          
-                        </div>
-                        <div class="col span-2-of-3">
-                        
-                        </div>
-                    </div>
+                   <!--  <div class="row">
+                        <div class="col span-1-of-3"></div>
+                        <div class="col span-2-of-3"></div>
+                    </div> -->
                      <div class="row">
-                        <div class="col span-1-of-3">
-                          
-                        </div>
+                        <div class="col span-1-of-3"></div>
                         <div class="col span-2-of-3">
-                        <input type ="button" class="btn-press" id ="press-btn" name="btn" value="Scan me">
+                            <input type ="button" class="btn-press" id ="press-btn" name="btn" value="Scan me">
                         </div>
-                    </div>
-                        
-                        
-                    
-                    
-                </form>
-                
-            </div>
-             
-            
+                    </div>   
+                </form>     
+            </div>     
         </header>
-       
-       
-       
         <footer>
-           
-            <div class="row">
-            
-             <div class="col span-1-of-2">
-            
-        
-                </div>
-                
-             <div class="col span-1-of-2">
-     
-                
-                </div>
-            </div>
+           <!--  <div class="row">
+                <div class="col span-1-of-2"></div>   
+                <div class="col span-1-of-2"></div>
+            </div> -->
             
             <div class="row">
-            <p class="designer">Web Designer : Ibrahim Ayyoub</p>
-                
-            <br>
-            <br>
-            <p class="rights">&copy; Copyright 2018 by Ibrahim Ayyoub,Simon Gaudert, Omar .R Mohsen, Nada .R Mohsen all rights reserved. </p>
-                
-            
+                <p class="designer">Web Designer : Ibrahim Ayyoub</p>     
+                <br>
+                <br>
+                <p class="rights">&copy; Copyright 2018 by Ibrahim Ayyoub,Simon Gaudert, Omar .R Mohsen, Nada .R Mohsen all rights reserved. </p>
             </div>
-       </footer>
-        
-        
+        </footer> 
     </body>
     <script type="text/javascript" src="../static/js/script.js"></script>
 </html>
